--- a/web/templates/test.html
+++ b/web/templates/test.html
@@ -23,30 +23,22 @@
     <script>
       // Assign the specification to a local variable vlSpec.
       var vlSpec = {
-        "$schema": "https://vega.github.io/schema/vega-lite/v3.json",
-    "data": {
-      "url": "data/movies.json"
-    },
-    "mark": "bar",
-    "encoding": {
-      "x": {
-        "type": "quantitative",
-        "aggregate": "count"
-      },
-      "y": {
-        "type": "nominal",
-        "field": "Creative_Type"
-      },
-      "color": {
-        "type": "quantitative",
-        "field": "Worldwide_Gross",
-        "aggregate": "mean"
-      }
-    }
+        $schema: "https://vega.github.io/schema/vega-lite/v3.json",
+        data: { url: "data/movies.json" },
+        mark: "point",
+        encoding: {
+          size: {
+            type: "quantitative",
+            aggregate: "count",
+          },
+          x: { type: "nominal", field: "Creative_Type" },
+          y: { type: "nominal", field: "Director" },
+          color: { type: "nominal", field: "MPAA_Rating" },
+        },
       };
 
       // Embed the visualization in the container with id `vis`
-      vegaEmbed('#vis', vlSpec);
+      vegaEmbed("#vis", vlSpec);
     </script>
   </body>
 </html>
