--- a/web/templates/v2.html
+++ b/web/templates/v2.html
@@ -1,128 +1,165 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- bootstrap CSS-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/d494f7bb71.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      type="text/javascript"
+    ></script>
+    <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.12.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
+    <!-- Import vega-embed -->
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.8.0"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- bootstrap CSS-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/d494f7bb71.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/main.css" />
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-  <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5.12.1"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
-  <!-- Import vega-embed -->
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.8.0"></script>
-</head>
+  <body>
+    <!-- Navbar -->
+    <nav
+      class="main_nav navbar fixed-top navbar-expand-lg navbar-light bg-light"
+    >
+      <a class="navbar-brand mb-0 h1" href="#"
+        ><i class="fas fa-database"></i>&nbsp;VisRecMockup</a
+      >
+      <!-- collapse button that hide all options on nav bar when screen gets narrower -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<body>
-  <!-- Navbar -->
-  <nav class="main_nav navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" href="#"><i class="fas fa-database"></i>&nbsp;VisRecMockup</a>
-    <!-- collapse button that hide all options on nav bar when screen gets narrower -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <!-- contents of nav (that can be collapsed)-->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <button
+              type="button"
+              class="btn btn-sm btn-outline-secondary"
+              id="bookmark"
+            >
+              <i class="fas fa-bookmark"></i> &nbsp; Bookmarks
+            </button>
+          </li>
+          <li class="nav-item active back_to_index">
+            <a class="nav-link" href="/"
+              ><i class="fas fa-undo-alt"></i> &nbsp; Return to Index
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-    <!-- contents of nav (that can be collapsed)-->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <button type="button" class="btn btn-sm btn-outline-secondary" id="bookmark">
-            <i class="fas fa-bookmark"></i> &nbsp; Bookmarks
-          </button>
-        </li>
-        <li class="nav-item active back_to_index">
-          <a class="nav-link" href="/"><i class="fas fa-undo-alt"></i> &nbsp; Return to Index
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Popup window content -->
-  <div id="popup" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <div class="bookmark_content"></div>
-    </div>
-  </div>
-
-  <!-- Main contents of the page, includes sideNavs and page contents -->
-  <main>
-    <div class="wrapper">
-      <!-- =========== Sidebar ============ -->
-      <nav id="sidebar1">
-        <!-- (1) Sidebar data -->
-        <div class="sidebar-datablock">
-          <h6>Data</h6>
-          <p>
-            <i class="fas fa-database"></i> &nbsp;<span id="dbName">Movies</span>
-            <button class="float-right">Change</button>
-          </p>
-        </div>
-
-        <!-- (2) sidebar fields -->
-        <!-- on submit the selection, call readFields in v1.js -->
-        <form>
-          <div class="sidebar-fields form-check">
-            <h6>Fields</h6>
-            <!-- fields of attributes are here -->
-
-            <!-- List of Attrs here (contains templates to different attr types) -->
-            <ul class="attr-lst list-unstyled"></ul>
-          </div>
-        </form>
-      </nav>
-
-      <!-- Page Content (specified and related) -->
-      <div class="page_content">
-        <!-- specified views -->
-        <div class="specified_views">
-          <h3>Specified Views</h3>
-          <div class="specified_main_area">
-            <div class="mainImg">
-              Welcome! Please select fields to generate recommanded charts.
-            </div>
-          </div>
-        </div>
-
-        <!-- related views -->
-        <div class="related_views">
-          <h3>Related Views</h3>
-          <div class="related_main_area">
-            <div class="relatedImg">
-            </div>
-          </div>
-        </div>
-
+    <!-- Popup window content -->
+    <div id="popup" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div class="bookmark_content"></div>
       </div>
     </div>
-  </main>
 
-  <!-- d3 and js file -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="js/v2.js"></script>
-  <script>
-    // function that plots the speciied view
-    // function plot(VlSpec) {
-    //     vegaEmbed('#visvis', vlSpec);
-    // }
-  </script>
+    <!-- Main contents of the page, includes sideNavs and page contents -->
+    <main>
+      <div class="wrapper">
+        <!-- =========== Sidebar ============ -->
+        <nav id="sidebar1">
+          <!-- (1) Sidebar data -->
+          <div class="sidebar-datablock">
+            <h6>Data</h6>
+            <p>
+              <i class="fas fa-database"></i> &nbsp;<span id="dbName"
+                >Movies</span
+              >
+              <button class="float-right">Change</button>
+            </p>
+          </div>
 
-  <!-- Bootstrap JS -->
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+          <!-- (2) sidebar fields -->
+          <!-- on submit the selection, call readFields in v1.js -->
+          <form>
+            <div class="sidebar-fields form-check">
+              <h6>Fields</h6>
+              <!-- fields of attributes are here -->
+
+              <!-- List of Attrs here (contains templates to different attr types) -->
+              <ul class="attr-lst list-unstyled"></ul>
+            </div>
+          </form>
+        </nav>
+
+        <!-- Page Content (specified and related) -->
+        <div class="page_content">
+          <!-- specified views -->
+          <div class="specified_views">
+            <h3>Specified Views</h3>
+            <div class="specified_main_area">
+              <div class="mainImg">
+                Welcome! Please select fields to generate recommanded charts.
+              </div>
+            </div>
+          </div>
+
+          <!-- related views -->
+          <div class="related_views">
+            <h3>Related Views</h3>
+            <div class="related_main_area">
+              <div class="relatedImg"></div>
+              <div class="loadmoreDiv" style="display: none;">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-outline-secondary"
+                  id="loadmoreBtn"
+                >
+                  <i class="fa fa-spinner"></i> &nbsp; Load More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- d3 and js file -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/v2.js"></script>
+    <script>
+      // function that plots the speciied view
+      // function plot(VlSpec) {
+      //     vegaEmbed('#visvis', vlSpec);
+      // }
+    </script>
+
+    <!-- Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script> -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
