--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -83,6 +83,10 @@
           <i class="fas fa-link"></i>
           <a href="/DepthFirstPath"> to DepthFirst-Path</a>
         </li>
+        <li>
+          <i class="fas fa-link"></i>
+          <a href="/Breadth-vs-Depth"> to Breadth-vs-Depth</a>
+        </li>
       </ul>
     </main>
     <!-- <script src="../static/js/v1.js"></script> -->
