--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -2,6 +2,38 @@ body {
   background-color: rgb(229, 229, 250);
 }
 
+/* Split the screen in half */
+.split {
+  height: 100vh;
+  width: 42%;
+  position: absolute;
+  overflow-y: scroll;
+  z-index: 1;
+  /* top: 0; */
+  overflow-x: hidden;
+  padding-top: 10px;
+  /* margin-bottom: 20px; */
+}
+
+/* Control the left side */
+.left {
+  left: 220px;
+}
+
+/* Control the right side */
+.right {
+  right: 40px;
+}
+
+/* If you want the content centered horizontally and vertically */
+/* .centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+} */
+
 hr.dashed {
   border-top: 3px dashed #bbb;
   width: 99%;
