--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -77,15 +77,23 @@
         </li>
         <li>
           <i class="fas fa-link"></i>
-          <a href="/DepthFirstLastNode"> to DepthFirst-LastNode</a>
+          <a href="/DepthFirstLastNodeSum"> to DepthFirst-LastNode (Sum)</a>
         </li>
         <li>
           <i class="fas fa-link"></i>
-          <a href="/DepthFirstPath"> to DepthFirst-Path</a>
+          <a href="/DepthFirstPathSum"> to DepthFirst-Path (Sum)</a>
         </li>
         <li>
           <i class="fas fa-link"></i>
           <a href="/Breadth-vs-Depth"> to Breadth-vs-Depth</a>
+        </li>
+        <li>
+          <i class="fas fa-link"></i>
+          <a href="/DepthFirstLastNodeAvg"> to DepthFirst-LastNode (Average)</a>
+        </li>
+        <li>
+          <i class="fas fa-link"></i>
+          <a href="/DepthFirstPathAvg"> to DepthFirst-Path (Average)</a>
         </li>
       </ul>
     </main>
