--- a/web/templates/v4.html
+++ b/web/templates/v4.html
@@ -32,7 +32,7 @@
       class="main_nav navbar fixed-top navbar-expand-lg navbar-light bg-light"
     >
       <a class="navbar-brand mb-0 h1" href="#"
-        ><i class="fas fa-database"></i>&nbsp;VisRecMockup - Depth First-Path</a
+        ><i class="fas fa-database"></i>&nbsp;VisRecMockup - DFPath (Sum)</a
       >
       <!-- collapse button that hide all options on nav bar when screen gets narrower -->
       <button
