--- a/web/templates/v6.html
+++ b/web/templates/v6.html
@@ -32,7 +32,7 @@
       class="main_nav navbar fixed-top navbar-expand-lg navbar-light bg-light"
     >
       <a class="navbar-brand mb-0 h1" href="#"
-        ><i class="fas fa-database"></i>&nbsp;VisRecMockup - DFLN (Sum)</a
+        ><i class="fas fa-database"></i>&nbsp;VisRecMockup - DFLN (Avg)</a
       >
       <!-- collapse button that hide all options on nav bar when screen gets narrower -->
       <button
@@ -140,7 +140,7 @@
 
     <!-- d3 and js file -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="js/v3.js"></script>
+    <script src="js/v6.js"></script>
     <script>
       // function that plots the speciied view
       // function plot(VlSpec) {
