--- a/web/templates/v5.html
+++ b/web/templates/v5.html
@@ -127,6 +127,7 @@
               </div>
               <div class="split_area" style="display: none;">
                 <div class="split left">
+                  <h4>Recommendation A</h4>
                   <div class="relatedImgLeft"></div>
                   <div class="loadmoreDivLeft" style="display: none;">
                     <button
@@ -140,6 +141,7 @@
                 </div>
 
                 <div class="split right">
+                  <h4>Recommendation B</h4>
                   <div class="relatedImgRight"></div>
                   <div class="loadmoreDivRight" style="display: none;">
                     <button
