--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -90,6 +90,10 @@ hr.dashed {
   margin: 15px 0 10px 20px;
 }
 
+#resetFields {
+  margin: 15px 0 10px 20px;
+}
+
 /* ============== Popup window styling ============= */
 
 /* background */
