--- a/web/templates/v3.html
+++ b/web/templates/v3.html
@@ -74,6 +74,16 @@
               <span>Toggle Sidebar</span>
             </button>
           </li>
+          <li class="nav-item active">
+            <button
+              type="button"
+              id="resetFields"
+              class="btn btn-sm btn-outline-secondary"
+            >
+              <i class="fa fa-repeat"></i>
+              <span>Reset Fields</span>
+            </button>
+          </li>
           <li class="nav-item active back_to_index">
             <a class="nav-link" href="/"
               ><i class="fas fa-undo-alt"></i> &nbsp; Return to Index
