--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -77,24 +77,24 @@
         </li>
         <li>
           <i class="fas fa-link"></i>
-          <a href="/DepthFirstLastNodeSum"> to DepthFirst-LastNode (Sum)</a>
+          <a href="/DepthFirstLastNodeSum"> to DepthFirst-LastNode</a>
         </li>
         <li>
           <i class="fas fa-link"></i>
-          <a href="/DepthFirstPathSum"> to DepthFirst-Path (Sum)</a>
+          <a href="/DepthFirstPathSum"> to DepthFirst-Path</a>
         </li>
         <li>
           <i class="fas fa-link"></i>
           <a href="/Breadth-vs-Depth"> to Breadth-vs-Depth</a>
         </li>
-        <li>
+        <!-- <li>
           <i class="fas fa-link"></i>
           <a href="/DepthFirstLastNodeAvg"> to DepthFirst-LastNode (Average)</a>
         </li>
         <li>
           <i class="fas fa-link"></i>
           <a href="/DepthFirstPathAvg"> to DepthFirst-Path (Average)</a>
-        </li>
+        </li> -->
       </ul>
     </main>
     <!-- <script src="../static/js/v1.js"></script> -->
