--- a/web/templates/v8.html
+++ b/web/templates/v8.html
@@ -97,7 +97,7 @@
 <main>
     <div class="wrapper">
       <!-- =========== Sidebar ============ -->
-      <nav id="sidebar1" class="active">
+      <nav id="sidebar1">
         <!-- (1) Sidebar data -->
         <div class="sidebar-datablock">
           <h6>Data</h6>
@@ -134,7 +134,7 @@
         </nav> -->
         <!-- specified views -->
         <div class="specified_views">
-          <h3>Specified Views</h3>
+          <h3>Specified View</h3>
           <div class="specified_main_area">
             <div class="mainImg">
               No specified visualization yet. Start exploring by selecting
