--- a/web/templates/v5.html
+++ b/web/templates/v5.html
@@ -105,7 +105,7 @@
     <main>
       <div class="wrapper">
         <!-- =========== Sidebar ============ -->
-        <nav id="sidebar1" class="active">
+        <nav id="sidebar1">
           <!-- (1) Sidebar data -->
           <div class="sidebar-datablock">
             <h6>Data</h6>
@@ -134,7 +134,7 @@
         <div class="page_content">
           <!-- specified views -->
           <div class="specified_views">
-            <h3>Specified Views</h3>
+            <h3>Specified View</h3>
             <div class="specified_main_area">
               <div class="mainImg">
                 No specified visualization yet. Start exploring by selecting
@@ -152,7 +152,7 @@
               </div>
               <div class="split_area" style="display: none;">
                 <div class="split left">
-                  <h4>Recommendation A</h4>
+                  <h4>Related Views A</h4>
                   <div class="relatedImgLeft"></div>
                   <div class="loadmoreDivLeft" style="display: none;">
                     <button
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="split right">
-                  <h4>Recommendation B</h4>
+                  <h4>Related Views B</h4>
                   <div class="relatedImgRight"></div>
                   <div class="loadmoreDivRight" style="display: none;">
                     <button
